--- a/etp/src/app/modules/dashboard/overview/overview.component.html
+++ b/etp/src/app/modules/dashboard/overview/overview.component.html
@@ -1,11 +1,11 @@
 <div class="wrap">
   <div class="container-fluid">
-    <h2 class="dash-title">Overview</h2>
+    <h2 class="dash-title" i18n>Overview</h2>
     <div class="card dash-card shadow-sm">
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
-            <p>History of activities</p>
+            <p i18n>History of activities</p>
 
             <ngx-charts-advanced-pie-chart
               [scheme]="colorScheme"
