--- a/etp/src/app/modules/dashboard/rules/rules.component.html
+++ b/etp/src/app/modules/dashboard/rules/rules.component.html
@@ -1,6 +1,6 @@
 <div class="wrap">
   <div class="container-fluid">
-    <h2 class="dash-title">Rules</h2>
+    <h2 class="dash-title" i18n>Rules</h2>
     <div class="card dash-card shadow-sm">
       <div class="card-body">
         <h4 class="card-title">Title</h4>
