--- a/etp/src/app/modules/snippets/dashboard-nav/topmenu/topmenu.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/topmenu/topmenu.component.html
@@ -8,7 +8,7 @@
     </h3>
   </div>
   <div class="menu-item">
-    <button mat-raised-button class="reload">RELOAD</button>
+    <button mat-raised-button class="reload" i18n>RELOAD</button>
   </div>
   <div class="menu-item mx-4"></div>
   <div class="menu-item">
