--- a/etp/src/app/modules/settings/devices/devices.component.html
+++ b/etp/src/app/modules/settings/devices/devices.component.html
@@ -1,20 +1,20 @@
 <div class="dash-card shadow-sm p-2">
   <div>
-    <p class="mt-3 mx-3">Your Devices</p>
+    <p class="mt-3 mx-3" i18n>Your Devices</p>
 
     <div class="my-5" [class.mx-5]="!(set.isHandset$ | async)">
       <div class="row justify-content-between align-items-center mx-3 mb-5">
         <div class="col-12 col-md-9 col-xl-7">
-          <h5 class="font-weight-normal text-secondary mb-2">
+          <h5 class="font-weight-normal text-secondary mb-2" i18n>
             Device History
           </h5>
-          <p class="mb-xl-0">
+          <p class="mb-xl-0" i18n>
             If you see a device here that you believe wasn’t you, please contact
             our support account immediately.
           </p>
         </div>
         <div class="col-12 col-xl-auto my-auto">
-          <button mat-raised-button class="btn btn-secondary">
+          <button mat-raised-button class="btn btn-secondary" i18n>
             Logout All devices
           </button>
         </div>
