--- a/etp/src/app/modules/settings/payment-options/payment-options.component.html
+++ b/etp/src/app/modules/settings/payment-options/payment-options.component.html
@@ -3,13 +3,13 @@
     <div class="row align-items-center">
       <div class="col">
         <!-- Title -->
-        <p class="my-auto">
+        <p class="my-auto" i18n>
           Payment methods
         </p>
       </div>
       <div class="col-auto">
         <!-- Button -->
-        <button mat-raised-button class="add">
+        <button mat-raised-button class="add" i18n>
           Add method
         </button>
       </div>
@@ -61,11 +61,11 @@
               <span class="material-icons">more_vert</span>
             </button>
             <mat-menu #menu="matMenu" class="menu" xPosition="before">
-              <button mat-menu-item>
+              <button mat-menu-item i18n>
                 <i class="material-icons mx-1">payments</i>
                 Edit
               </button>
-              <button mat-menu-item (click)="open(content)">
+              <button mat-menu-item (click)="open(content)" i18n>
                 <i class="material-icons mx-1 text-danger">delete</i>
                 <span class="text-danger">
                   Delete
@@ -82,6 +82,7 @@
                       type="button"
                       class="btn btn-primary col-auto mx-1"
                       (click)="modal.close()"
+                      i18n
                     >
                       No
                     </button>
@@ -90,6 +91,7 @@
                       type="button"
                       class="btn btn-danger col-auto ml-1 mr-2"
                       (click)="delete(paymentInfo, i); modal.close()"
+                      i18n
                     >
                       Yes
                     </button>
