--- a/etp/src/app/modules/settings/profile-details/profile-details.component.html
+++ b/etp/src/app/modules/settings/profile-details/profile-details.component.html
@@ -1,6 +1,6 @@
 <div class="card dash-card">
   <div class="card-body">
-    <p>Details</p>
+    <p i18n>Details</p>
 
     <div class="mt-5 mx-3">
       <div class="row justify-content-between align-items-center">
@@ -18,12 +18,12 @@
             </div>
             <div class="col ml-n2">
               <!-- Heading -->
-              <h5 class="mb-1 font-weight-normal">
+              <h5 class="mb-1 font-weight-normal" i18n>
                 Your avatar
               </h5>
 
               <!-- Text -->
-              <small class="text-muted">
+              <small class="text-muted" i18n>
                 PNG or JPG no bigger than 1000px wide and tall.
               </small>
             </div>
@@ -55,7 +55,7 @@
         <form class="d-block w-100" [formGroup]="profileForm">
           <div class="row">
             <div class="form-group col-sm-6">
-              <label for="firstName"> First Name</label>
+              <label for="firstName" i18n> First Name</label>
               <input
                 type="text"
                 class="form-control"
@@ -65,7 +65,7 @@
               />
             </div>
             <div class="form-group col-sm-6">
-              <label for="lastname"> Last Name</label>
+              <label for="lastname" i18n> Last Name</label>
               <input
                 type="text"
                 class="form-control"
@@ -77,7 +77,7 @@
           </div>
           <div class="row">
             <div class="form-group col-sm-6">
-              <label for="email"> Email Address</label>
+              <label for="email" i18n> Email Address</label>
               <input
                 type="email"
                 class="form-control"
@@ -86,7 +86,7 @@
               />
             </div>
             <div class="form-group col-sm-6">
-              <label for="phone Number"> Phone Number</label>
+              <label for="phone Number" i18n> Phone Number</label>
               <input
                 type="tel"
                 class="form-control"
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="email"> Address</label>
+            <label for="email" i18n> Address</label>
             <textarea
               type="text"
               class="form-control"
@@ -108,7 +108,7 @@
 
           <div class="row">
             <div class="form-group col-sm-6">
-              <label for="TC Number"> Tc Number</label>
+              <label for="TC Number" i18n> Tc Number</label>
               <input
                 type="text"
                 class="form-control"
@@ -117,7 +117,7 @@
               />
             </div>
             <div class="form-group col-sm-6">
-              <label for="Birthdate"> Birth Date</label>
+              <label for="Birthdate" i18n> Birth Date</label>
               <input
                 type="date"
                 class="form-control"
@@ -128,6 +128,7 @@
           </div>
           <div class="form-group mt-3 mb-2">
             <button
+              i18n
               (click)="update()"
               mat-raised-button
               class="text-primary px-4"
