--- a/etp/src/app/modules/snippets/dashboard-nav/profilebar/profilebar.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/profilebar/profilebar.component.html
@@ -16,7 +16,7 @@
     >
   </div>
   <div class="item" [matMenuTriggerFor]="userMenu">
-    <span class="tabs ml-auto">Hi, {{ data?.surname }}</span>
+    <span class="tabs ml-auto" i18n>Hi, {{ data?.surname }}</span>
   </div>
   <div class="item" [matMenuTriggerFor]="langMenu" style="line-height: 1;">
     <div style="width: 30px; margin: auto 3px;">
@@ -29,10 +29,10 @@
 <!-- drop downs  -->
 
 <mat-menu #userMenu="matMenu" class="menu">
-  <button mat-menu-item>
+  <button mat-menu-item i18n>
     <i class="fa fa-cog pr-2" aria-hidden="true"></i> Settings
   </button>
-  <button mat-menu-item (click)="asAuth.logout()">
+  <button mat-menu-item (click)="asAuth.logout()" i18n>
     <i class="fas fa-sign-out-alt pr-2"></i> Logout
   </button>
 </mat-menu>
