--- a/etp/src/app/modules/snippets/dashboard-nav/settings-devices/settings-devices.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/settings-devices/settings-devices.component.html
@@ -6,7 +6,7 @@
     [class.w-tablet]="set.isMedium$ | async"
   >
     <div class="card-body" [class.py-2]="set.isHandset$ | async">
-      <span class="material-icons-outlined icon">
+      <span class="material-icons-outlined icon" i18n>
         {{ options.icon }}
       </span>
       <button
@@ -14,6 +14,7 @@
         class="w-100"
         [class.text-center]="set.isHandset$ | async"
         *ngIf="!(set.isMedium$ | async)"
+        i18n
       >
         {{ options.navName | titlecase }}</button
       ><i
