--- a/etp/src/app/modules/auth/signup/signup.component.html
+++ b/etp/src/app/modules/auth/signup/signup.component.html
@@ -2,7 +2,7 @@
   <h1 class="title" i18n *ngIf="!signedUp">Sign Up</h1>
   <div class="container">
     <div class="form">
-      <div *ngIf="signedUp" class="text-center">
+      <div *ngIf="signedUp" class="text-center d-block">
         <div class="mail">
           <img src="/assets/img/mail.png" alt="Mail sent" class="img-fluid" />
         </div>
@@ -16,19 +16,6 @@
             Please check your email and click on the link to verfiy your email
             address.
           </p>
-        </div>
-        <div class="d-flex justify-content-center">
-          <button
-            mat-raised-button
-            routerLink="/auth/register"
-            class="btn btn-primary m-1"
-          >
-            Complete Registeration
-          </button>
-          <br />
-          <button mat-raised-button class="btn btn-primary m-1">
-            Resend Verification Email
-          </button>
         </div>
       </div>
       <div class="error d-block w-auto" *ngIf="errorMsg && !signedUp">
