--- a/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.html
+++ b/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.html
@@ -7,12 +7,12 @@
           <img src="/assets/img/mail.png" alt="Mail sent" class="img-fluid" />
         </div>
         <div>
-          <p class="text-center confirm-sub">
+          <p class="text-center confirm-sub" i18n>
             Please check your email for your Login Info
           </p>
           <div class="mx-auto">
             <a href="/auth" routerLink="/auth"
-              ><button mat-raised-button class="btn btn-primary px-4 my-3">
+              ><button mat-raised-button class="btn btn-primary px-4 my-3" i18n>
                 Log in
               </button></a
             >
