--- a/etp/src/app/modules/settings/devices/devices.component.html
+++ b/etp/src/app/modules/settings/devices/devices.component.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-auto">
                   <!-- Button -->
-                  <button class="btn btn-sm btn-outline-secondary">
+                  <button class="btn btn-sm btn-outline-secondary" i18n>
                     Log out
                   </button>
                 </div>
