--- a/etp/src/app/modules/auth/authhome/authhome.component.html
+++ b/etp/src/app/modules/auth/authhome/authhome.component.html
@@ -2,8 +2,8 @@
   <div class="col-xl-7 col-lg-3 col-md-12">
     <div class="auth-side">
       <div class="authbox">
-        <h1 class="title mx-2" *ngIf="!(set.isTablet$ | async)">
-          <span i18n>Get green energy from the sun </span><br />
+        <h1 class="title mx-2" *ngIf="!(set.isTablet$ | async)" i18n>
+          <span>Get green energy from the sun </span><br />
           And sell on Energy Trading Platform
         </h1>
       </div>
