--- a/etp/src/app/modules/auth/signin/signin.component.html
+++ b/etp/src/app/modules/auth/signin/signin.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
-  <h1 class="title" *ngIf="isSignin">Sign In</h1>
-  <h1 class="title" *ngIf="isReset">Forgot Password</h1>
+  <h1 class="title" *ngIf="isSignin" i18n>Sign In</h1>
+  <h1 class="title" *ngIf="isReset" i18n>Forgot Password</h1>
   <p *ngIf="isReset" class="text-center info" i18n>
     Place your email in the field below. <br />
     We will send you a link with the instructions to follow.
@@ -9,7 +9,7 @@
     <div class="form">
       <div class="error d-block w-auto" *ngIf="errorMsg">
         <div class="alert alert-danger px-5" role="alert">
-          <span>{{ errorMsg | titlecase }}</span>
+          <span i18n>{{ errorMsg | titlecase }}</span>
         </div>
       </div>
 
