--- a/etp/src/app/modules/settings/login-security/login-security.component.html
+++ b/etp/src/app/modules/settings/login-security/login-security.component.html
@@ -51,7 +51,7 @@
           </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6 py-3">
           <div class="card bg-dark border ml-md-4">
             <div class="card-body">
               <!-- Text -->
