--- a/etp/src/app/modules/dashboard/overview/overview.component.html
+++ b/etp/src/app/modules/dashboard/overview/overview.component.html
@@ -6,6 +6,14 @@
         <div class="row">
           <div class="col-md-6">
             <p i18n>History of activities</p>
+
+            <ngx-charts-advanced-pie-chart
+              [scheme]="colorScheme"
+              [results]="single"
+              [gradient]="gradient"
+              [label]="'Energy Usage'"
+            >
+            </ngx-charts-advanced-pie-chart>
           </div>
           <div class="col-md-6 side"></div>
         </div>
