overview page updated

--- a/etp/src/app/modules/dashboard/analytics/analytics.component.html
+++ b/etp/src/app/modules/dashboard/analytics/analytics.component.html
@@ -1,6 +1,6 @@
 <div class="wrap">
   <div class="container-fluid">
-    <h2 class="dash-title" i18n>Analytics</h2>
+    <h2 class="dash-title" i18n>IOT device status</h2>
     <div class="card dash-card mb-2 shadow-sm">
       <div class="card-body">
         <div class="row">
