--- a/etp/src/app/modules/dashboard/settings/settings.component.scss
+++ b/etp/src/app/modules/dashboard/settings/settings.component.scss
@@ -15,8 +15,8 @@
 .fixed {
   position: fixed;
   width: 20%;
-  top: 8%;
-  left: 280px;
+  // top: 8%;
+  left: 297px;
   transition: all 0.3s;
 }
 .fixed.active {
