--- a/etp/src/app/modules/snippets/dashboard-nav/sidebar/sidebar.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/sidebar/sidebar.component.html
@@ -32,7 +32,7 @@
       routerLink="/dashboard/analytics"
       routerLinkActive="active"
     >
-      <a i18n><i class="far fa-chart-bar"></i> Analytics </a>
+      <a i18n><i class="far fa-chart-bar"></i> IOT device status </a>
     </li>
     <!-- <li
       (click)="set.dismiss()"
