--- a/etp/src/app/modules/dashboard/settings/settings.component.html
+++ b/etp/src/app/modules/dashboard/settings/settings.component.html
@@ -33,7 +33,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-9 mx-auto my-3">
+      <div class="col-md-9 ml-auto my-3">
         <router-outlet></router-outlet>
       </div>
     </div>
