--- a/etp/src/app/modules/snippets/dashboard-nav/sidebar/sidebar.component.scss
+++ b/etp/src/app/modules/snippets/dashboard-nav/sidebar/sidebar.component.scss
@@ -2,7 +2,7 @@
 
 #sidebar {
   width: 280px;
-  background: $darkbg;
+  background: $bg2;
   transition: all 0.3s;
   height: 100vh;
   position: fixed;
@@ -10,7 +10,7 @@
   left: 0;
   overflow-y: auto;
   overflow-x: hidden;
-  border-right: 1px solid $darkbg;
+  // border-right: 1px solid $bg2;
   i {
     padding: 0 30px;
     font-size: 18px;
@@ -19,7 +19,7 @@
     padding: 0 20px;
     text-align: center;
     border-right: 1px solid $darkbg;
-    border-bottom: 1px solid $darkbg;
+    // border-bottom: 1px solid $darkbg;
     background-color: $bg2;
     a {
       font-size: 2.1rem;
@@ -54,7 +54,7 @@
   border: none !important;
 }
 #sidebar .sidebar-header {
-  background: $darkbg;
+  background: $bg2;
   text-align: center;
   cursor: pointer;
   width: 120px;
