--- a/etp/src/app/modules/dashboard/overview/overview.component.html
+++ b/etp/src/app/modules/dashboard/overview/overview.component.html
@@ -1,101 +1,136 @@
 <div class="wrap">
   <div class="container-fluid">
     <h2 class="dash-title" i18n>Overview</h2>
-    <div class="card dash-card shadow-sm">
-      <div class="card-body">
-        <div class="row">
-          <div class="col-md-5 mb-5">
-            <div class="col-12 mx-auto">
-              <div class="card dash-card bg-grey shadow-sm my-5 py-2 px-3">
-                <p>
-                  Earnings
-                </p>
-                <div class="card-body position-relative">
-                  <div class="left-icon">
-                    <span class="material-icons h1">money</span>
-                  </div>
-                  <div class="right">
-                    <div class="d-block grey">Total</div>
-                    <p class="earn">3,500 <span>TL</span></p>
-                  </div>
-                </div>
-              </div>
 
-              <div class="card dash-card shadow-sm bg-grey py-2 px-3">
-                <p>total co<sub>2</sub> savings</p>
-                <div class="card-body position-relative">
-                  <div class="left-icon">
-                    <i class="fas fa-industry f-2"></i>
-                  </div>
-                  <div class="right">
-                    <div class="d-block grey">Total</div>
-                    <p class="earn">29.99 <span>t</span></p>
-                  </div>
+    <div class="row">
+      <div class="col-md-5 mb-3">
+        <div class="row my-3">
+          <div class="col-sm-6">
+            <div class="card dash-card shadow-sm py-2 px-3">
+              <p>
+                Earnings
+              </p>
+              <div class="card-body position-relative">
+                <div class="left-icon">
+                  <span class="material-icons h1">money</span>
+                </div>
+                <div class="right">
+                  <div class="d-block grey">Total</div>
+                  <p class="earn">3,500 <span>TL</span></p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-7">
-            <div id="chart" class="bg-grey p-3 shadow-sm dash-card">
-              <p i18n>Energy Balance Today</p>
-              <apx-chart
-                [series]="series"
-                [chart]="chart.lineOptions.chart"
-                [xaxis]="chart.lineOptions.xaxis"
-                [grid]="chart.lineOptions.grid"
-                [stroke]="stroke"
-                [tooltip]="chart.lineOptions.tooltip"
-                [colors]="colorScheme.domain"
-              ></apx-chart>
+          <div class="col-sm-6">
+            <div class="card dash-card shadow-sm py-2 px-3">
+              <p>total co<sub>2</sub> savings</p>
+              <div class="card-body position-relative">
+                <div class="left-icon">
+                  <i class="fas fa-industry f-2"></i>
+                </div>
+                <div class="right">
+                  <div class="d-block grey">Total</div>
+                  <p class="earn">29.99 <span>G</span></p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="log my-3">
-          <div class="card dash-card py-2 px-3 my-4 border-0">
-            <p>
-              Forecast
-            </p>
-            <div class="card-body">
-              <div class="row">
-                <div
-                  class="dash-card bg-grey col-md-3 py-2 px-3 shadow h-50 mb-3"
-                >
-                  <p>Weather today</p>
 
-                  <div class="row mt-4 mb-2">
-                    <div class="col-5">
-                      <img
-                        src="/assets/svg/weather/050-sun.svg"
-                        alt="{{ today?.summary }}"
-                        class="img-fluid mx-2"
-                      />
-                    </div>
-                    <div class="col-7 my-auto">
-                      <h2 class="earn">
-                        {{ chart.getCelcius(today?.temperature) }}
-                        &deg; <span>C</span>
-                      </h2>
-                      <p class="grey">{{ today?.summary }}</p>
-                    </div>
-                  </div>
+        <div class="dash-card shadow-sm p-3 col-12">
+          <p>Recent Notifications</p>
+
+          <div *ngFor="let item of data.report | slice: 0 - 4">
+            <mat-list>
+              <mat-list-item>
+                <div class="left-icon notif">
+                  <i
+                    class="fa fa-info-circle text-primary mx-4"
+                    aria-hidden="true"
+                    *ngIf="item.status === 'info'"
+                  ></i>
+                  <i
+                    class="fas fa-exclamation-triangle text-warning mx-4"
+                    aria-hidden="true"
+                    *ngIf="item.status === 'warning'"
+                  ></i>
+                  <i
+                    class="fas fa-cog text-success mx-4"
+                    aria-hidden="true"
+                    *ngIf="item.status === 'setting'"
+                  ></i>
                 </div>
-                <div
-                  class="col-md-8 offset-1"
-                  [class.my-5]="set.isHandset$ | async"
-                >
-                  <div id="chart" class="dash-card">
-                    <p class="pr-5">Temperature Over the week</p>
-                    <apx-chart
-                      [series]="chart.weatherForecastOptions.series"
-                      [chart]="chart.weatherForecastOptions.chart"
-                      [dataLabels]="chart.weatherForecastOptions.dataLabels"
-                      [plotOptions]="chart.weatherForecastOptions.plotOptions"
-                      [xaxis]="chart.barOptions.xaxis"
-                      [grid]="chart.weatherForecastOptions.grid"
-                      [yaxis]="chart.barOptions.yaxis"
-                    ></apx-chart>
-                  </div>
+                <div class="right text-white">
+                  {{ item.message | titlecase }}
+                </div></mat-list-item
+              >
+            </mat-list>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-7">
+        <div id="chart" class="p-3 shadow-sm dash-card">
+          <p i18n>Energy Balance Today</p>
+          <apx-chart
+            [series]="series"
+            [chart]="chart.lineOptions.chart"
+            [xaxis]="chart.lineOptions.xaxis"
+            [grid]="chart.lineOptions.grid"
+            [stroke]="stroke"
+            [tooltip]="chart.lineOptions.tooltip"
+            [colors]="colorScheme.domain"
+          ></apx-chart>
+        </div>
+      </div>
+    </div>
+
+    <div class="log my-3">
+      <div class="card dash-card py-2 px-3 my-4 border-0">
+        <p>
+          Forecast
+        </p>
+        <div class="card-body">
+          <div class="row">
+            <div
+              class="dash-card bg-grey col-md-3 mr-1 py-2 px-3 my-auto shadow h-50 mb-3"
+            >
+              <p>Weather today</p>
+
+              <div class="row mt-4 mb-2">
+                <div class="col-5">
+                  <img
+                    src="/assets/svg/weather/050-sun.svg"
+                    alt="{{ today?.summary }}"
+                    class="img-fluid mx-2"
+                  />
                 </div>
+                <div class="col-7 my-auto">
+                  <h2 class="earn">
+                    {{ chart.getCelcius(today?.temp) }}
+                    &deg; <span>C</span>
+                  </h2>
+                  <p class="grey">{{ (today?.weather)[0].description }}</p>
+                </div>
+              </div>
+            </div>
+            <div
+              class="col-md-8 col-12 ml-auto"
+              [class.my-5]="set.isHandset$ | async"
+            >
+              <div id="chart" class="dash-card d-block">
+                <p class="text-center d-block">
+                  Temperature range Over the week
+                </p>
+                <apx-chart
+                  [series]="chart.weatherForecastOptions.series"
+                  [chart]="chart.weatherForecastOptions.chart"
+                  [dataLabels]="chart.weatherForecastOptions.dataLabels"
+                  [plotOptions]="chart.weatherForecastOptions.plotOptions"
+                  [xaxis]="chart.barOptions.xaxis"
+                  [grid]="chart.weatherForecastOptions.grid"
+                  [yaxis]="chart.barOptions.yaxis"
+                ></apx-chart>
               </div>
             </div>
           </div>
