done wıth translatıons

--- a/etp/src/app/modules/snippets/dashboard-nav/log-msg/log-msg.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/log-msg/log-msg.component.html
@@ -25,7 +25,7 @@
           </div>
           <div class="col-lg-8 col-md-7 col-6">
             <div class="mx-1 message" i18n>
-              {{ item.message }}
+              {{ url === "en" ? item.messageEN : (item.messageTR | titlecase) }}
             </div>
           </div>
         </div>
