--- a/etp/src/app/modules/dashboard/overview/overview.component.html
+++ b/etp/src/app/modules/dashboard/overview/overview.component.html
@@ -5,9 +5,9 @@
     <div class="row">
       <div class="col-md-5 mb-3">
         <div class="row my-3">
-          <div class="col-sm-6">
+          <div class="col-md-6 col-sm-12">
             <div class="card dash-card shadow-sm py-2 px-3">
-              <p>
+              <p i18n>
                 Earnings
               </p>
               <div class="card-body position-relative">
@@ -15,21 +15,21 @@
                   <span class="material-icons h1">money</span>
                 </div>
                 <div class="right">
-                  <div class="d-block grey">Total</div>
+                  <div class="d-block grey" i18n>Total</div>
                   <p class="earn">3,500 <span>TL</span></p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-6">
+          <div class="col-md-6 col-sm-12">
             <div class="card dash-card shadow-sm py-2 px-3">
-              <p>total co<sub>2</sub> savings</p>
+              <p i18n>total co<sub>2</sub> savings</p>
               <div class="card-body position-relative">
                 <div class="left-icon">
                   <i class="fas fa-industry f-2"></i>
                 </div>
                 <div class="right">
-                  <div class="d-block grey">Total</div>
+                  <div class="d-block grey" i18n>Total</div>
                   <p class="earn">29.99 <span>G</span></p>
                 </div>
               </div>
@@ -38,7 +38,7 @@
         </div>
 
         <div class="dash-card shadow-sm p-3 col-12">
-          <p>Recent Notifications</p>
+          <p i18n>Recent Notifications</p>
 
           <div *ngFor="let item of data.report | slice: 0 - 4">
             <mat-list>
@@ -60,8 +60,10 @@
                     *ngIf="item.status === 'setting'"
                   ></i>
                 </div>
-                <div class="right text-white">
-                  {{ item.message | titlecase }}
+                <div class="right text-white" i18n>
+                  {{
+                    url === "en" ? item.messageEN : (item.messageTR | titlecase)
+                  }}
                 </div></mat-list-item
               >
             </mat-list>
@@ -87,7 +89,7 @@
 
     <div class="log my-3">
       <div class="card dash-card py-2 px-3 my-4 border-0">
-        <p>
+        <p i18n>
           Forecast
         </p>
         <div class="card-body">
@@ -95,7 +97,7 @@
             <div
               class="dash-card bg-grey col-md-3 mr-1 py-2 px-3 my-auto shadow h-50 mb-3"
             >
-              <p>Weather today</p>
+              <p i18n>Weather today</p>
 
               <div class="row mt-4 mb-2">
                 <div class="col-5">
@@ -119,7 +121,7 @@
               [class.my-5]="set.isHandset$ | async"
             >
               <div id="chart" class="dash-card d-block">
-                <p class="text-center d-block">
+                <p class="text-center d-block" i18n>
                   Temperature range Over the week
                 </p>
                 <apx-chart
