changing home page

--- a/etp/src/assets/scss/theme.scss
+++ b/etp/src/assets/scss/theme.scss
@@ -13,7 +13,7 @@ $danger: #ee423d;
 $warning: #ffab4f;
 $light: #f8f9fa;
 $dark: #20293c;
-@import "bootstrap/scss/bootstrap";
+@import "bootstrap";
 
 /*----------------------------------------------------------------------
   * Front - Responsive Website Template version v2.9.0
